Fix reconfigure concurrent access to known files